# docs/swagger.json
@@ -498,7 +498,7 @@
             }
         },
         "/collections/list/{offset}/{limit}": {
-            "get": {
+            "post": {
                 "description": "Retrieves a list of collections. Sorted by priority.",
                 "consumes": [
                     "application/json"
@@ -524,6 +524,15 @@
                         "name": "limit",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "flag array",
+                        "name": "query",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handlers.CollectionListQueryBody"
+                        }
                     }
                 ],
                 "responses": {
@@ -552,8 +561,8 @@
             }
         },
         "/collections/rankings/{offset}/{limit}": {
-            "get": {
-                "description": "Acts as a leaderboard. Optionally provide ?sort[criteria]=volumeTraded\u0026sort[mode]=asc",
+            "post": {
+                "description": "Acts as a leaderboard",
                 "consumes": [
                     "application/json"
                 ],
@@ -578,6 +587,15 @@
                         "name": "limit",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "sort rules",
+                        "name": "query",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handlers.CollectionRankingQueryBody"
+                        }
                     }
                 ],
                 "responses": {
@@ -872,7 +890,7 @@
             }
         },
         "/collections/{collectionId}/tokens/{offset}/{limit}": {
-            "get": {
+            "post": {
                 "description": "Retrieves the tokens of a collection. Unsorted.",
                 "consumes": [
                     "application/json"
@@ -905,6 +923,15 @@
                         "name": "limit",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "filters and sort rules",
+                        "name": "query",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handlers.CollectionTokensQueryBody"
+                        }
                     }
                 ],
                 "responses": {
@@ -3333,6 +3360,45 @@
                 },
                 "version": {
                     "type": "integer"
+                }
+            }
+        },
+        "handlers.CollectionListQueryBody": {
+            "type": "object",
+            "properties": {
+                "flags": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
+        "handlers.CollectionRankingQueryBody": {
+            "type": "object",
+            "properties": {
+                "sortRules": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
+        "handlers.CollectionTokensQueryBody": {
+            "type": "object",
+            "properties": {
+                "filters": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "string"
+                    }
+                },
+                "sortRules": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "string"
+                    }
                 }
             }
         },
